--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,12 +2,19 @@
     padding:0;
     margin:0;
 }
+a {
+    text-decoration: none;      /* убираем подчеркивание у ссылок */
+    color: indigo;
+}
+a:visited {
+    color: indigo;
+}
 .content-block
 {
     background:#FFFFFF;
-    height:540px;
+    height:560px;
     overflow: hidden;
-    padding:10px 5px 15px 5px;
+    padding:5px 5px 5px 5px;
 }
 .footer
 {
@@ -21,22 +28,40 @@
 }
 .main
 {
-    background:#F0F8FF;
-    height:550px;
-    width:1030px; /* ширина блока */
-    float:right; /* прижатие блока */
+    background: url("/image/bg.jpg") no-repeat;
+    background-size: 100% 100%;
+    height:540px;              /* высота блока */
+    width:990px;               /* ширина блока */
+    float:right;               /* прижатие блока */
+    padding: 10px;             /* отступ между содежимым и границей блока */
 }
 .menu
 {
-    background:#F0F8FF;
-    width:150px; /* ширина блока */
+    background: url("/image/bg.jpg") no-repeat;
+    background-size: 100% 100%;
+    width:150px;
     height:200px;
-    float:left; /* прижатие блока */
+    float:left;
+    padding: 10px;
+}
+.menu a {
+    display: block;
+    padding:3px;
+}
+.menu a:hover {
+    background-color: bisque;  /* при наведении курсором ссылка поменяет цвет */
+}
+.menu li {
+    list-style-type: none;     /* убираем маркеры списка */
+}
+.my-table th, .my-table  td {
+    text-align: center;
+    padding: 5px;
 }
 .site-block
 {
     background:#FFFFFF;
-    width:1200px; /* ширина сайта*/
-    height:600px;
-    margin: 0 auto; /* выравниваем сайт по центру*/
+    width:1200px;             /* ширина сайта*/
+    height:600px;             /* высота сайта */
+    margin: 0 auto;           /* выравниваем сайт по центру*/
 }
