--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,10 +1,10 @@
 *{
-    padding:0;
     margin:0;
+    padding:0;
 }
 a {
-    text-decoration: none;      /* убираем подчеркивание у ссылок */
     color: indigo;
+    text-decoration: none;      /* убираем подчеркивание у ссылок */
 }
 a:visited {
     color: indigo;
@@ -13,36 +13,43 @@ a:visited {
 {
     background:#FFFFFF;
     height:560px;
-    overflow: hidden;
     padding:5px 5px 5px 5px;
+    overflow: hidden;
 }
 .footer
 {
-    background:#DCDCDC;
+    background: #DCDCDC;
     padding:5px;
 }
 .header
 {
-    background:#DCDCDC;
+    background: #DCDCDC;
     padding:5px;
+}
+.login-container {
+    background-color: aliceblue;
+    height: 200px;
+    margin: auto;
+    padding: 20px 30px;
+    width: 250px;
 }
 .main
 {
     background: url("/image/bg.jpg") no-repeat;
     background-size: 100% 100%;
-    height:540px;              /* высота блока */
-    width:990px;               /* ширина блока */
     float:right;               /* прижатие блока */
+    height:540px;              /* высота блока */
     padding: 10px;             /* отступ между содежимым и границей блока */
+    width:990px;               /* ширина блока */
 }
 .menu
 {
     background: url("/image/bg.jpg") no-repeat;
     background-size: 100% 100%;
-    width:150px;
-    height:200px;
     float:left;
+    height:200px;
     padding: 10px;
+    width:150px;
 }
 .menu a {
     display: block;
@@ -54,14 +61,30 @@ a:visited {
 .menu li {
     list-style-type: none;     /* убираем маркеры списка */
 }
+.my-button {
+    font: 12pt serif;
+    padding: 2px 10px
+}
+.my-input {
+    font-size: medium;
+    height: 30px;
+    width: 230px
+}
 .my-table th, .my-table  td {
-    text-align: center;
     padding: 5px;
+    text-align: center;
+}
+.registration-container {
+    background-color: aliceblue;
+    height: 470px;
+    margin: auto;
+    padding: 20px 50px;
+    width: 250px;
 }
 .site-block
 {
     background:#FFFFFF;
-    width:1200px;             /* ширина сайта*/
     height:600px;             /* высота сайта */
     margin: 0 auto;           /* выравниваем сайт по центру*/
+    width:1200px;             /* ширина сайта*/
 }
