--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -27,7 +27,7 @@ a:visited {
     padding:5px;
 }
 .login-container {
-    background-color: aliceblue;
+    background-color: #FAEBD7;
     height: 200px;
     margin: auto;
     padding: 20px 30px;
@@ -35,7 +35,8 @@ a:visited {
 }
 .main
 {
-    background: url("/image/bg.jpg") no-repeat;
+    background: #FFF8DC;
+    /*background: url("/image/bg.jpg") no-repeat;*/
     background-size: 100% 100%;
     float:right;               /* прижатие блока */
     height:540px;              /* высота блока */
@@ -44,7 +45,8 @@ a:visited {
 }
 .menu
 {
-    background: url("/image/bg.jpg") no-repeat;
+    background: #FFF8DC;
+    /*background: url("/image/bg.jpg") no-repeat;*/
     background-size: 100% 100%;
     float:left;
     height:200px;
@@ -59,7 +61,7 @@ a:visited {
     background-color: bisque;  /* при наведении курсором ссылка поменяет цвет */
 }
 .menu li {
-    list-style-type: none;     /* убираем маркеры списка */
+    list-style-type: none;        /* убираем маркеры списка */
 }
 .my-button {
     font: 12pt serif;
@@ -75,7 +77,7 @@ a:visited {
     text-align: center;
 }
 .registration-container {
-    background-color: aliceblue;
+    background-color: #FAEBD7;
     height: 470px;
     margin: auto;
     padding: 20px 50px;
