--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,31 +1,34 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
 a {
     color: indigo;
-    text-decoration: none;      /* убираем подчеркивание у ссылок */
+    text-decoration: none;
 }
+
 a:visited {
     color: indigo;
 }
-.content-block
-{
-    background:#FFFFFF;
-    height:560px;
-    padding:5px 5px 5px 5px;
+
+.content-block {
+    background: #FFFFFF;
+    height: 560px;
+    padding: 5px 5px 5px 5px;
     overflow: hidden;
 }
-.footer
-{
+
+.footer {
     background: #DCDCDC;
-    padding:5px;
+    padding: 5px;
 }
-.header
-{
+
+.header {
     background: #DCDCDC;
-    padding:5px;
+    padding: 5px;
 }
+
 .login-container {
     background-color: #FAEBD7;
     height: 200px;
@@ -33,49 +36,54 @@ a:visited {
     padding: 20px 30px;
     width: 250px;
 }
-.main
-{
+
+.main {
     background: #FFF8DC;
-    /*background: url("/image/bg.jpg") no-repeat;*/
     background-size: 100% 100%;
-    float:right;               /* прижатие блока */
-    height:540px;              /* высота блока */
-    padding: 10px;             /* отступ между содежимым и границей блока */
-    width:990px;               /* ширина блока */
-}
-.menu
-{
-    background: #FFF8DC;
-    /*background: url("/image/bg.jpg") no-repeat;*/
-    background-size: 100% 100%;
-    float:left;
-    height:200px;
+    float: right;
+    height: 540px;
     padding: 10px;
-    width:150px;
+    width: 990px;
 }
+
+.menu {
+    background: #FFF8DC;
+    background-size: 100% 100%;
+    float: left;
+    height: 200px;
+    padding: 10px;
+    width: 150px;
+}
+
 .menu a {
     display: block;
-    padding:3px;
+    padding: 3px;
 }
+
 .menu a:hover {
-    background-color: bisque;     /* при наведении курсором ссылка поменяет цвет */
+    background-color: bisque;
 }
+
 .menu li {
-    list-style-type: none;        /* убираем маркеры списка */
+    list-style-type: none;
 }
+
 .my-button {
     font: 12pt serif;
     padding: 2px 10px
 }
+
 .my-input {
     font-size: medium;
     height: 30px;
     width: 230px
 }
+
 .my-table th, .my-table  td {
     padding: 5px;
     text-align: center;
 }
+
 .registration-container {
     background-color: #FAEBD7;
     height: 470px;
@@ -83,10 +91,10 @@ a:visited {
     padding: 20px 50px;
     width: 250px;
 }
-.site-block
-{
+
+.site-block {
     background:#FFFFFF;
-    height:600px;             /* высота сайта */
-    margin: 0 auto;           /* выравниваем сайт по центру*/
-    width:1200px;             /* ширина сайта*/
+    height: 600px;
+    margin: 0 auto;
+    width: 1200px;
 }
